--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cron-parser": "^5.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "ws": "^8.18.3"
